# sprawl-ai

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
api/: Dockerfile  config.py  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial_schema.py
api/audit/: log.py
api/auth/: deps.py  jwt.py
api/db/: base.py  session.py  types.py
api/db/models/: __init__.py  audit.py  connector.py  embedding.py  github.py  graph.py  investigation.py  rotation.py  secret.py  workspace.py
api/routers/: audit_router.py  connectors.py  demo.py  events.py  findings.py  graph.py  health.py  investigations.py  me.py  rotations.py  secrets.py
api/schemas/: common.py  secrets.py
api/services/: arq_pool.py  demo.py  redis.py
api/streaming/: sse.py
docs/: README.md  dev.sh  docs.json  index.mdx
shared/: pyproject.toml  refs.py
specs/: 01-product-definition.md  02-capabilities-scope.md  03-prd.md  04-tech-stack.md  05-tech-spec.md  (+3 more)
worker/: Dockerfile  audit.py  config.py  db.py  main.py  pyproject.toml  redis.py
worker/agents/: __init__.py  graph.py  guardrails.py  state.py
worker/agents/nodes/: __init__.py  blast_radius.py  ingest.py  investigator.py  severity.py  triage.py
worker/blastradius/: __init__.py  builder.py
worker/connectors/: __init__.py  github.py  iam.py  vault.py  vault_client.py
worker/jobs/: __init__.py  health.py  investigate.py  run_rotation_step.py  sweeper.py
worker/llm/: __init__.py  client.py
worker/rotation/: __init__.py  engine.py  gate.py  lock.py  sandbox.py  steps.py
worker/severity/: __init__.py  engine.py
worker/tests/rotation/: test_engine.py
(+48 files in other folders)
