[project]
name = "sprawl-worker"
version = "0.1.0"
description = "Sprawl AI worker service (arq + LangGraph)"
requires-python = ">=3.12"
dependencies = [
    "sprawl-shared",
    "arq>=0.26",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "structlog>=24.0",
    "tenacity>=8.3",
    # Agents (M7)
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langgraph-checkpoint-postgres>=2.0",
    "litellm>=1.40",
    "langfuse>=2.0",
    # Connectors (M9)
    "hvac>=2.3",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "factory-boy>=3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
